# silverpeak-prometheus

./: .gitignore  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: package.Dockerfile  py310.Dockerfile  py311.Dockerfile  py39.Dockerfile
docs/: installing_from_github.md  installing_using_pypi.md  metrics.md  running_on_container.md
silverpeak_exporter/: args.py  collectors.py  file.py  logger.py  main.py  metrics.py  utls.py
test/: result.py  test_vars.yml
